--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calender-app",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://Asifa-039.github.io/calender-app",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "vite": "^5.3.4"
