--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "type": "module",
   "name": "calender-app",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "homepage": "https://Asifa-039.github.io/calender-app",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.553.0",
@@ -16,11 +18,12 @@
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.0",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
-    "gh-pages": "^6.3.0",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "vite": "^5.3.4"
   }
 }
